--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                     <img class="logo-picture" src="pic1.jpg" width="45px" height="45px">
                 </div>
                 <div class="col-7 text-center">
-                    <a href="glavnaya.html">Главная</a>
+                    <a href="index.html">Главная</a>
                     <a href="perviysemestr.html">Первый семестр</a>
                     <a href="#2sem">Второй семестр</a>
                     <a href="main.html">Услуги</a>
