--- a/perviysemestr.html
+++ b/perviysemestr.html
@@ -12,7 +12,7 @@
 </div>
 <nav>
   <ul>
-    <li><a href='glavnaya.html'>Главная</a></li>
+    <li><a href='index.html'>Главная</a></li>
     <li><a href='perviysemestr.html'>Первый семестр</a></li>
     <li><a href='#'>Второй семестр</a></li>
     <li><a href='main.html'>Услуги</a></li>
